--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-# Created by .ignore support plugin (hsz.mobi)
+# mac
 .DS_Store
+# IntelliJ
 .idea/
+# dart
+.dart_tool/
+.packages
+# node
 node_modules/
 logs/
 files/
