--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: wssnet_ghost3a
-version: 1.0.0
-description: Websocket client for node-ghost3a
+version: 3.0.52
+description: Websocket client for node-ghost3a, the server side was write by nodejs at https://github.com/yangfanyu/node-ghost3a
 dependencies:
   crypto: ^2.1.3
   encrypt: ^3.3.1
