--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-ghost3a",
-    "version": "3.1.21",
+    "version": "3.1.22",
     "private": false,
     "description": "Lightweight, web server, websocket server, websocket client. Cluster support. Simple and easy to use.",
     "main": "ghost3a.js",
@@ -46,5 +46,9 @@
         "uuid": "^3.4.0",
         "ws": "^7.2.1",
         "xml2js": "^0.4.23"
+    },
+    "optionalDependencies": {
+        "bufferutil": "^4.0.1",
+        "utf-8-validate": "^5.0.2"
     }
 }
