--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-ghost3a",
-    "version": "3.1.28",
+    "version": "3.1.29",
     "private": false,
     "description": "Lightweight, web server, websocket server, websocket client. Cluster support. Simple and easy to use.",
     "main": "ghost3a.js",
@@ -29,6 +29,7 @@
     },
     "homepage": "https://github.com/yangfanyu/node-ghost3a#readme",
     "dependencies": {
+        "axios": "^0.19.2",
         "body-parser": "^1.19.0",
         "cheerio": "^1.0.0-rc.3",
         "compression": "^1.7.4",
@@ -41,7 +42,6 @@
         "log4js": "^4.5.1",
         "mongodb": "^3.5.2",
         "multer": "^1.4.2",
-        "request": "^2.88.0",
         "saslprep": "^1.0.3",
         "uuid": "^3.4.0",
         "ws": "^7.2.1",
