--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "node-ghost3a",
-    "version": "3.2.1",
+    "version": "3.2.2",
     "private": false,
     "description": "Lightweight, web server, websocket server, websocket client. Cluster support. Simple and easy to use.",
     "main": "ghost3a.js",
@@ -29,26 +29,27 @@
     },
     "homepage": "https://github.com/yangfanyu/node-ghost3a#readme",
     "dependencies": {
-        "axios": "^0.19.2",
+        "axios": "^0.21.0",
         "body-parser": "^1.19.0",
-        "cheerio": "^1.0.0-rc.3",
+        "bufferutil": "^4.0.2",
         "compression": "^1.7.4",
-        "cookie-parser": "^1.4.4",
+        "cookie-parser": "^1.4.5",
         "crc": "^3.8.0",
-        "crypto-js": "^3.1.9-1",
+        "crypto-js": "^4.0.0",
         "express": "^4.17.1",
         "express-xml-bodyparser": "^0.3.0",
-        "helmet": "^3.21.2",
-        "log4js": "^4.5.1",
-        "mongodb": "^3.5.2",
+        "helmet": "^4.2.0",
+        "log4js": "^6.3.0",
+        "mongodb": "^3.6.3",
         "multer": "^1.4.2",
         "saslprep": "^1.0.3",
-        "uuid": "^3.4.0",
-        "ws": "^7.2.1",
+        "utf-8-validate": "^5.0.3",
+        "uuid": "^8.3.1",
+        "ws": "^7.4.0",
         "xml2js": "^0.4.23"
     },
     "optionalDependencies": {
-        "bufferutil": "^4.0.1",
-        "utf-8-validate": "^5.0.2"
+        "bufferutil": "^4.0.2",
+        "utf-8-validate": "^5.0.3"
     }
 }
